# episod-slack-bot

./: .gitignore  .travis.yml  Cargo.toml  Procfile  README.md
src/: extract.rs  filters.rs  helpers.rs  lib.rs  slack.rs
src/episod/: extract.rs  mod.rs
static/: welcome.html
