[package]
name = "episod"
version = "0.1.0"
authors = ["François Mockers <mockersf@gmail.com>"]

[lib]
name = "episod"
path = "src/lib.rs"

[dependencies]
log = "0.4"
fern = "0.5"
env_logger = "0.5"
chrono = { version = "0.4", features = [ "serde" ] }

actix-web = { version = "0.7", features = ["alpn"], optional = true }
lazy_static = "1.1"
clap = "2.32"
toml = "0.4"
structopt = "0.2"

select = "0.4"
uuid = { version = "0.7", features = ["serde", "v4"] }
futures = "0.1"

failure = "0.1"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.5"

aws_lambda = { git = "https://github.com/srijs/rust-aws-lambda", optional = true }
http = { version = "0.1", optional = true }
reqwest = { version = "0.9", optional = true }
rusoto_core = { version = "0.34", optional = true }
rusoto_sns = { version = "0.34", optional = true }

rand = "0.5"

[features]
default = ["aws"]
hosted = ["actix-web"]
aws = ["aws_lambda", "http", "reqwest", "rusoto_core", "rusoto_sns"]