[package]
name = "episod"
version = "0.1.0"
authors = ["François Mockers <mockersf@gmail.com>"]

[lib]
name = "episod"
path = "src/lib.rs"

[dependencies]
# Crates to interact with AWS
aws_lambda = { git = "https://github.com/srijs/rust-aws-lambda" }
rusoto_core = "0.34"
rusoto_sns = "0.34"
http = "0.1"

# Crate with slack types
slack_push = { path = "../slack-push/" }

# Crate to make http request from lambda
reqwest = "0.9"

# Serde
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.5"

# Crates related to domain
chrono = { version = "0.4", features = [ "serde" ] }
lazy_static = "1.1"
failure = "0.1"
rand = "0.5"
select = "0.4"
